src/objects/Learning_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Notes__c</fullName>
        <label>Approver Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <inlineHelpText>Date this assignment was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result_Text__c</fullName>
        <formula>TEXT( Evaluation_Result__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Result Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result__c</fullName>
        <label>Evaluation Result</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluation_Score__c</fullName>
        <label>Evaluation Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Times_Taken__c</fullName>
        <label>Evaluation Times Taken</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Test_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag indicates that this assignment is created for preview purposes while creating new Learnings</inlineHelpText>
        <label>Is Test Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Published_Learning_Version_Decision__c</fullName>
        <label>Last Published Learning Version Decision</label>
        <picklist>
            <picklistValues>
                <fullName>New version taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keep using old version</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Published_Learning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Published Learning Version</label>
        <referenceTo>Learning_Version__c</referenceTo>
        <relationshipLabel>Learning Assignments (Last Published Learning Version)</relationshipLabel>
        <relationshipName>Learning_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Version</label>
        <referenceTo>Learning_Version__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning</label>
        <referenceTo>Learning__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Progress_Percentage__c</fullName>
        <label>Progress %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Progress_Text__c</fullName>
        <formula>TEXT(Progress__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <description>.</description>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shared_Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Learning Assignment</label>
        <referenceTo>Shared_Learning_Assignment__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Section_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan Section Assignment</label>
        <referenceTo>Training_Plan_Section_Assignment__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Section_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Training Plan Section Item</label>
        <referenceTo>Training_Plan_Section_Item__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan Section</label>
        <referenceTo>Training_Plan_Section__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Notes__c</fullName>
        <label>User Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LEA-{0000000}</displayFormat>
        <label>Learning Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>LMS_Approval_Sharing__c</fullName>
        <label>LMS Approval Sharing</label>
    </sharingReasons>
</CustomObject>